--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@chakra-ui/react": "^1.4.2",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "@fontsource/anonymous-pro": "^4.5.0",
     "@graphql-codegen/typescript-urql": "^3.4.1",
     "@urql/exchange-graphcache": "^4.3.5",
     "formik": "^2.2.9",
